[gd_scene load_steps=18 format=2]

[ext_resource path="res://menus/Fire Background.gd" type="Script" id=1]
[ext_resource path="res://menus/Fire GIF/Fire Main Menu Title11.png" type="Texture" id=2]
[ext_resource path="res://menus/MenuButton.tscn" type="PackedScene" id=3]
[ext_resource path="res://menus/MainMenu.gd" type="Script" id=4]
[ext_resource path="res://menus/Fire GIF/Fire Main Menu Title4.png" type="Texture" id=5]
[ext_resource path="res://menus/Fire GIF/Fire Main Menu Title1.png" type="Texture" id=6]
[ext_resource path="res://menus/Fire GIF/Fire Main Menu Title5.png" type="Texture" id=7]
[ext_resource path="res://menus/Fire GIF/Fire Main Menu Title6.png" type="Texture" id=8]
[ext_resource path="res://menus/Fire GIF/Fire Main Menu Title7.png" type="Texture" id=9]
[ext_resource path="res://menus/Fire GIF/Fire Main Menu Title8.png" type="Texture" id=10]
[ext_resource path="res://menus/Fire GIF/Fire Main Menu Title3.png" type="Texture" id=11]
[ext_resource path="res://menus/Fire GIF/Fire Main Menu Title9.png" type="Texture" id=12]
[ext_resource path="res://menus/Fire GIF/Fire Main Menu Title10.png" type="Texture" id=13]
[ext_resource path="res://menus/Fire GIF/Fire Main Menu Title2.png" type="Texture" id=14]
[ext_resource path="res://menus/Fire GIF/Fire Main Menu Title12.png" type="Texture" id=15]
[ext_resource path="res://menus/Fire Background.webm" type="VideoStream" id=16]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 6 ), ExtResource( 14 ), ExtResource( 11 ), ExtResource( 5 ), ExtResource( 7 ), ExtResource( 8 ), ExtResource( 9 ), ExtResource( 10 ), ExtResource( 12 ), ExtResource( 13 ), ExtResource( 2 ), ExtResource( 15 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[node name="MainMenu" type="Node"]
script = ExtResource( 4 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="MarginContainer" type="MarginContainer" parent="CanvasLayer"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": true
}

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/MarginContainer"]
margin_right = 1024.0
margin_bottom = 600.0
alignment = 1
__meta__ = {
"_edit_use_anchors_": true
}

[node name="CenterContainer" type="CenterContainer" parent="CanvasLayer/MarginContainer/VBoxContainer"]
margin_top = 69.0
margin_right = 1024.0
margin_bottom = 369.0
rect_min_size = Vector2( 0, 300 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="CanvasLayer/MarginContainer/VBoxContainer/CenterContainer"]
position = Vector2( 500, 100 )
scale = Vector2( 0.613333, 0.613333 )
frames = SubResource( 1 )
playing = true

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/MarginContainer/VBoxContainer"]
margin_top = 373.0
margin_right = 1024.0
margin_bottom = 531.0
focus_next = NodePath("Start")
alignment = 1

[node name="Start" parent="CanvasLayer/MarginContainer/VBoxContainer/VBoxContainer" instance=ExtResource( 3 )]
margin_bottom = 50.0
rect_min_size = Vector2( 0, 50 )
focus_neighbour_top = NodePath("../Exit")
focus_neighbour_bottom = NodePath("../Instructions")
text = "START"
arrow_margin_from_center = 75

[node name="Instructions" parent="CanvasLayer/MarginContainer/VBoxContainer/VBoxContainer" instance=ExtResource( 3 )]
margin_top = 54.0
margin_bottom = 104.0
rect_min_size = Vector2( 0, 50 )
focus_neighbour_top = NodePath("../Start")
focus_neighbour_bottom = NodePath("../Exit")
text = "SPIRITUAL GUIDANCE"
arrow_margin_from_center = 195

[node name="Exit" parent="CanvasLayer/MarginContainer/VBoxContainer/VBoxContainer" instance=ExtResource( 3 )]
margin_top = 108.0
margin_bottom = 158.0
rect_min_size = Vector2( 0, 50 )
focus_neighbour_top = NodePath("../Instructions")
text = "GIVE UP"
arrow_margin_from_center = 90

[node name="FireBackground" type="VideoPlayer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
stream = ExtResource( 16 )
autoplay = true
script = ExtResource( 1 )

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
autoplay = true

[node name="FullScreenTimer" type="Timer" parent="."]
wait_time = 0.25
one_shot = true
autostart = true

[node name="FocusTimer" type="Timer" parent="."]
wait_time = 0.25
one_shot = true

[connection signal="pressed" from="CanvasLayer/MarginContainer/VBoxContainer/VBoxContainer/Start" to="CanvasLayer/MarginContainer/VBoxContainer/VBoxContainer/Start" method="_on_Start_pressed"]
[connection signal="pressed" from="CanvasLayer/MarginContainer/VBoxContainer/VBoxContainer/Instructions" to="CanvasLayer/MarginContainer/VBoxContainer/VBoxContainer/Start" method="_on_Instructions_pressed"]
[connection signal="pressed" from="CanvasLayer/MarginContainer/VBoxContainer/VBoxContainer/Exit" to="CanvasLayer/MarginContainer/VBoxContainer/VBoxContainer/Start" method="_on_Exit_pressed"]
[connection signal="timeout" from="FullScreenTimer" to="." method="_on_FullScreenTimer_timeout"]
[connection signal="timeout" from="FocusTimer" to="." method="_on_FocusTimer_timeout"]
